// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="default_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "default_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="default_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoFocus: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": true,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.autoFocus: true_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.autoFocus: true_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.autoFocus: true_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.checkedIcon: CheckCircleOutlined - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.checkedIcon: CheckCircleOutlined_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckCircleOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.checkedIcon: CheckCircleOutlined_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.checkedIcon: CheckCircleOutlined_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.checkedText: Checked - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <span>
        Checked
      </span>,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.checkedText: Checked_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.checkedText: Checked_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.color: # - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.color: #_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[{\\"&.ant-switch-checked\\":{\\"backgroundColor\\":\\"#f44336 !important\\"}},null]}",
      "disabled": undefined,
      "id": "properties.color: #_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.color: #_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.disabled: true_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": true,
      "id": "properties.disabled: true_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.disabled: true_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inputStyle: CSS style applied - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.inputStyle: CSS style applied_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,{\\"border\\":\\"2px solid red\\"}]}",
      "disabled": undefined,
      "id": "properties.inputStyle: CSS style applied_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.inputStyle: CSS style applied_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label align: right - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.label align: right_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.label align: right_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.label align: right_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label colon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.label colon: false_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.label colon: false_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.label colon: false_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.label disabled: true_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.label disabled: true_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.label disabled: true_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label extra: showing extra - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.label extra: showing extra_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.label extra: showing extra_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.label extra: showing extra_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label inline: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.label inline: true_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.label inline: true_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.label inline: true_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label span: 4 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.label span: 4_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.label span: 4_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.label span: 4_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.size: small_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.size: small_input",
      "loading": undefined,
      "onChange": [Function],
      "size": "small",
      "unCheckedChildren": <IconBlock
        blockId="properties.size: small_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.title_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.title_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.title_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CloseOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.uncheckedIcon: UnlockFilled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.uncheckedIcon: UnlockFilled_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.uncheckedIcon: UnlockFilled_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <IconBlock
        blockId="properties.uncheckedIcon: UnlockFilled_uncheckedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "UnlockFilled",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.uncheckedText: Unchecked - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "checked": false,
      "checkedChildren": <IconBlock
        blockId="properties.uncheckedText: Unchecked_checkedIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "CheckOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{\\"style\\":[null,null]}",
      "disabled": undefined,
      "id": "properties.uncheckedText: Unchecked_input",
      "loading": undefined,
      "onChange": [Function],
      "size": undefined,
      "unCheckedChildren": <span>
        Unchecked
      </span>,
    },
    Object {},
  ],
]
`;
